# decision-intelligence-platform

./: .gitignore  AGENTS.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
dip_framework/: __init__.py  __main__.py  cli.py  contracts.py  trust_loop.py  v02.py
docs/: DIP_COMPLETION_PLAN.md  DIP_GITHUB_AUDIT_2026-05-24.md
examples/: adapter-evidence-contract-kit.json  adapter-evidence-contract.json  api-resource-model.json  canonical-openapi-contract.json  capability-lineage-explorer-contract.json  case-evidence-query-contract.json  certification-evidence-packs.json  contract-compatibility-versioning.json  cost-usage-evidence-contract.json  durable-case-store-adapter.json  durable-evidence-store-policy.json  edi-observer-ingestion-contract.json  engineering-review-readiness-cases.json  engineering-review-readiness-decision-spec.json  entitlement-usage-gate-contract.json  event-recovery-contract-v2.json  event-recovery-contract.json  event-recovery-fixtures.json  evidence-retention-legal-hold-contract.json  external-approval-adapter.json  external-approval-boundary.json  external-identity-evidence.json  governance-dashboard-data-contract.json  governance-exception-register.json  governance-review-queue-contract.json  governance-store-contract.json  governance-store-logical-api.json  governance-store-logical-schema.json  identity-rbac-registry.json  integration-certification-ux-contract.json  ml-shared-capability-inventory.json  openapi-skeleton.json  operational-risk-triage-cases.json  operational-risk-triage-decision-spec.json  (+37 more)
(+183 files in other folders)
