[project]
name = "decision-intelligence-platform"
version = "0.1.0"
description = "Pre-runtime governed decision review and simulation framework."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
dip = "dip_framework.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
